fix(theme, mobile): Fix closed action bar visibility.

--- a/invenio_stats_dashboard/assets/semantic-ui/less/invenio_stats_dashboard/stats_dashboard.less
+++ b/invenio_stats_dashboard/assets/semantic-ui/less/invenio_stats_dashboard/stats_dashboard.less
@@ -627,6 +627,7 @@
   &.hidden {
     bottom: -8rem;
     transition: bottom 500ms ease-in-out;
+    display: block;
   }
 
   #mobile-action-menu-toggle {
